--- a/OceanGame.csproj
+++ b/OceanGame.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Assets\Scripts\Float.cs" />
     <Compile Include="Assets\Scripts\GarbageFloatDraggable.cs" />
     <Compile Include="Assets\Scripts\GarbageFloatPoof.cs" />
+    <Compile Include="Assets\Scripts\Playdropscript.cs" />
     <Compile Include="Assets\Scripts\PointCounter.cs" />
     <Compile Include="Assets\Scripts\Swim.cs" />
     <Compile Include="Assets\Scripts\UtilityScripts\spawnControler.cs" />
