--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,7 +61,7 @@
      <Compile Include="Assets\Scripts\Swim.cs" />
      <Compile Include="Assets\Scripts\UtilityScripts\SpawnQuestions.cs" />
      <Compile Include="Assets\Scripts\UtilityScripts\SpecialFishSpawner.cs" />
-     <Compile Include="Assets\Scripts\UtilityScripts\spawnControler.cs" />
+     <Compile Include="Assets\Scripts\UtilityScripts\spawnController.cs" />
      <Compile Include="Assets\Scripts\WaveController.cs" />
      <None Include="Assets\Prefabs\Plugins\Pixelplacement\iTween\ReadMe!\ReadMe!.txt" />
      <None Include="Assets\nnj3de_crucarp\README.txt" />
